# osdag-tests-final

./: .gitignore  README.md  batch.csv  batch1.json  install.py  osdag-val.spec  results.csv  results.json  setup.py
osdag-validator-cli/: README.md  pyproject.toml
osdag-validator-cli/osdag_validator_cli.egg-info/: PKG-INFO  SOURCES.txt
osdag-validator-cli/tests/: test_cli_generated.py
osdag_validator/: core.py
osdag_validator.egg-info/: SOURCES.txt  top_level.txt
osdag_validator_cli/: app.py  batch.py  cli_typer.py  entry.py
tests/: conftest.py  dummy_is800.py  test_auto_cli.py  test_cli_helpers.py  test_combined_edgecases.py  test_edge_negative_cases.py  test_end_fin_plate_design.py  test_geometry_checks.py  test_integration_complex_flows.py  test_invalid_inputs_and_exceptions.py  test_performance_sanity.py  test_plate_and_connection_limits.py  test_plate_height_width_limits.py  test_plate_thickness_and_filters.py  test_randomized_robustness.py  test_stress_and_bounds.py  test_utils.py  test_validator_basic.py  test_validator_edgecases.py  test_validator_integration.py  test_validator_parametrics.py  test_validator_performance.py  test_validator_welds_and_plates.py  test_weld_filtering_exhaustive.py  test_weld_length_zero_empty.py  test_welds_and_bolts.py
tests/osdag_screening/: README.md  pytest.ini  requirements.txt
tests/osdag_screening/demo_module/: utils.py
tests/osdag_screening/osdag_validator/: __init__.py  plugin.py  validator.py
tests/osdag_screening/osdag_validator.egg-info/: PKG-INFO
tests/osdag_screening/osdag_validator_cli/: __init__.py  (+4 more)
(+3 files in other folders)
